--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2553,10 +2553,12 @@ div.container footer {
   justify-content: flex-end; }
 
 .container.teams > .content .teams-list > li > i {
-  margin-left: 10px; }
+  margin-left: 10px;
+  color: #3BC363; }
 
 .container.users > .content .users-list > li > i {
-  margin-left: 10px; }
+  margin-left: 10px;
+  color: #3BC363; }
 
 .container.users > .content .modal-content.chat > .chat-window {
   max-height: 300px;
