--- a/frontend/stylesheets/index.scss
+++ b/frontend/stylesheets/index.scss
@@ -8,6 +8,7 @@ $primary-green: #3BC363;
 $primary-gray: #CBD0CD;
 $primary-font-size: 32px;
 $regular-font-size: 22px;
+$giant-font-size: $primary-font-size * 1.5;
 
 body {
   font: 14px Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -59,6 +60,8 @@ body {
 }
 
 @import 'buttons';
+@import 'slack_button';
+@import 'shared';
 @import 'header';
 @import 'footer';
 @import 'modal';
@@ -66,3 +69,4 @@ body {
 @import 'configuration';
 @import 'teams';
 @import 'users';
+@import 'support';
