--- a/views/landing.jade
+++ b/views/landing.jade
@@ -7,5 +7,5 @@ block content
   main(
     data-react-class="LandingApp"
     data-react-type="plain"
-    data-react-props={ slackButtonUrl: slackButtonUrl }
+    data-react-props={ slackButtonUrl: slackButtonUrl, telegramButtonUrl: telegramButtonUrl }
   )
