--- a/views/support.jade
+++ b/views/support.jade
@@ -4,5 +4,5 @@ block content
   main(
     data-react-class="SupportApp"
     data-react-type="plain"
-    data-react-props={ slackButtonUrl: slackButtonUrl }
+    data-react-props={ slackButtonUrl: slackButtonUrl, telegramButtonUrl: telegramButtonUrl }
   )
