added channels list to admin users list

--- a/frontend/stylesheets/index.scss
+++ b/frontend/stylesheets/index.scss
@@ -60,7 +60,8 @@ body {
 }
 
 @import 'buttons';
-@import 'bot_button';
+@import 'bot-button';
+@import 'channels-list';
 @import 'shared';
 @import 'header';
 @import 'footer';
