--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -10,5 +10,6 @@ block pagescript
     window.__INITIAL_STATE__ = {
       viewedTeam: !{JSON.stringify(viewedTeam)},
       team: !{JSON.stringify(team)},
-      users: !{JSON.stringify(users)}
+      users: !{JSON.stringify(users)},
+      channels: { items: !{JSON.stringify(channels)} }
     }
