created questions list, added create action

--- a/views/admin/surveys.jade
+++ b/views/admin/surveys.jade
@@ -9,5 +9,6 @@ block pagescript
   script(type="text/javascript").
     window.__INITIAL_STATE__ = {
       team: !{JSON.stringify(team)},
-      surveys: !{JSON.stringify(surveys)}
+      surveys: !{JSON.stringify(surveys)},
+      questions: !{JSON.stringify(questions)}
     }
