--- a/public/bundles/stylesheet.bundle.css
+++ b/public/bundles/stylesheet.bundle.css
@@ -2667,3 +2667,16 @@ div.container footer {
           margin-bottom: 20px; }
           #support-container > section.top > .content > p.main-message > a {
             color: #FFFFFF; }
+
+.container.surveys > .content .answers-list {
+  margin: 0 0 30px 30px; }
+
+.container.surveys > .content .surveys-edit .actions {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  justify-content: flex-end; }
