--- a/views/admin/surveys.jade
+++ b/views/admin/surveys.jade
@@ -10,5 +10,6 @@ block pagescript
     window.__INITIAL_STATE__ = {
       team: !{JSON.stringify(team)},
       surveys: !{JSON.stringify(surveys)},
-      questions: !{JSON.stringify(questions)}
+      questions: !{JSON.stringify(questions)},
+      answers: !{JSON.stringify(answers)}
     }
