moved SurveysEdit from modal window

--- a/frontend/stylesheets/surveys.scss
+++ b/frontend/stylesheets/surveys.scss
@@ -6,9 +6,10 @@
     }
 
     .surveys-edit {
-      .actions {
-        @include flexbox;
-        @include justify-content(flex-end);
+      i.fa.fa-chevron-left {
+        cursor: pointer;
+        color: $primary-green;
+        margin-right: 10px;
       }
     }
 
