--- a/views/admin/surveys.jade
+++ b/views/admin/surveys.jade
@@ -11,5 +11,6 @@ block pagescript
       team: !{JSON.stringify(team)},
       surveys: !{JSON.stringify(surveys)},
       questions: !{JSON.stringify(questions)},
-      answers: !{JSON.stringify(answers)}
+      answers: !{JSON.stringify(answers)},
+      results: !{JSON.stringify(results)}
     }
