--- a/views/surveys/show.jade
+++ b/views/surveys/show.jade
@@ -8,5 +8,7 @@ block content
 block pagescript
   script(type="text/javascript").
     window.__INITIAL_STATE__ = {
-      survey: !{JSON.stringify(survey)}
+      survey: !{JSON.stringify(survey)},
+      questions: !{JSON.stringify(questions)},
+      results: !{JSON.stringify(results)}
     }
