created QuestionsList component

--- a/views/surveys/show.jade
+++ b/views/surveys/show.jade
@@ -10,5 +10,5 @@ block pagescript
     window.__INITIAL_STATE__ = {
       survey: !{JSON.stringify(survey)},
       questions: !{JSON.stringify(questions)},
-      results: !{JSON.stringify(results)}
+      userAnswers: !{JSON.stringify(userAnswers)}
     }
