--- a/frontend/stylesheets/survey.scss
+++ b/frontend/stylesheets/survey.scss
@@ -11,7 +11,7 @@
       }
     }
 
-    h1, .questions-counter, .question, .answers {
+    h1, p, .questions-counter, .answers {
       margin-bottom: 30px;
     }
 
@@ -21,7 +21,7 @@
       color: $primary-green;
     }
 
-    .question {
+    p {
       font-size: $primary-font-size;
       font-weight: 300;
     }
