--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
     link(rel="stylesheet", href="/bundles/stylesheet.bundle.css")
     include ./includes/favicon
     block meta
+    meta(name="og:site_name" content="MentorBot")
+    meta(name="description" content="Advice by prominent mentors on growth hacking, product, investors, company culture, and other crucial topics.")
   body
     block content
     block pagescript
